--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+    <!-- google ads -->
+    <meta name="google-adsense-account" content="ca-pub-1917724703640493">
+
     <!-- fontawesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
@@ -16,7 +19,7 @@
 
     <link rel="stylesheet" href="assets/css/styles.css">
 
-
+<meta name="google-adsense-account" content="ca-pub-1917724703640493">
     <title>Bai tap buoi 9</title>
   </head>
   <body>
