--- a/index.html
+++ b/index.html
@@ -329,7 +329,27 @@
     </div>
     <!-- End Section seven -->
 
-
+    <!-- Google ads -->
+    <div class="google-ads">
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1917724703640493" crossorigin="anonymous"></script>
+            <!-- thu nghiem 0 -->
+            <ins class="adsbygoogle"
+                style="display:block"
+                data-ad-client="ca-pub-1917724703640493"
+                data-ad-slot="4649900250"
+                data-ad-format="auto"
+                data-full-width-responsive="true"></ins>
+            <script>
+                (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- End google ads -->
 
 
     <script src="assets/bootstrap/jquery.slim.min.js"></script>
